# fastapi-practice

./: .gitignore  README.md  docker-compose.yml  poetry.toml  pyproject.toml
.githooks/: pre-commit
docker/api/: Dockerfile
setup/: pyproject.toml  setup.cfg
