[tool.poetry]
name = "fastapi-practice"
version = "0.1.0"
description = ""
authors = ["kawano-020 <orca.inc0510@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pysen = {extras = ["lint"], version = "^0.9.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# pysen
[tool.pysen-cli]
settings_dir = "setup"

[tool.pysen]
version = "0.9"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 79
py_version = "py39"
mypy_ignore_packages = []

[[tool.pysen.lint.mypy_targets]]
  paths = ["."]

[tool.pysen.lint.source]
  includes = ["."]
  exclude_globs = []